Fixed the card shift

--- a/braid.css
+++ b/braid.css
@@ -66,6 +66,9 @@ body {
     transition: top 0.2s, left 0.2s;
     pointer-events: none;
 }
+.card.braidcard {
+    transition: top 1s, left 1s;
+}
 .back {
     background-color: blue;
     border: 2px solid white;
@@ -249,3 +252,23 @@ body {
 #redo {
     background: url("icons/redo.png");
 }
+
+.tooltip {/*apply this class to the object that receives the tip*/
+    position: relative;
+}
+.tooltip .tttext {
+    visibility: hidden;
+    width: 120px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 0;
+}
+.tooltip:hover .tttext {
+    visibility: visible;
+    z-index: 5000;
+}
+
